--- a/page.html
+++ b/page.html
@@ -13,9 +13,9 @@
         <!-- H1 -->
         <h1>This is My First Article</h1>
     </div>
-    <div class="text">
+    <div>
         <!-- BACON IPSUM -->
-        <p>
+        <p class="text">
             Bacon ipsum dolor amet pancetta meatball kevin landjaeger leberkas sausage boudin picanha chuck biltong shankle. 
             Brisket short loin bacon chicken flank jerky tri-tip hamburger cupim cow pork chop andouille shank salami. Ball tip capicola meatball ham biltong strip steak. Boudin t-bone landjaeger pork tri-tip, pig cow flank. Buffalo salami capicola chicken shankle, landjaeger pork chop chuck pork kevin. 
             Jowl tenderloin pork chop, short loin cupim bacon kielbasa jerky boudin tail fatback filet mignon meatball beef ribs capicola.
@@ -37,9 +37,9 @@
         <!-- H1 -->
         <h1>This is Another Article</h1>
     </div>
-    <div class="text">
+    <div>
             <!-- BACON IPSUM -->
-            <p>
+            <p class="text">
                 Bacon ipsum dolor amet pancetta meatball kevin landjaeger leberkas sausage boudin picanha chuck biltong shankle. 
                 Brisket short loin bacon chicken flank jerky tri-tip hamburger cupim cow pork chop andouille shank salami. Ball tip capicola meatball ham biltong strip steak. Boudin t-bone landjaeger pork tri-tip, pig cow flank. Buffalo salami capicola chicken shankle, landjaeger pork chop chuck pork kevin. 
                 Jowl tenderloin pork chop, short loin cupim bacon kielbasa jerky boudin tail fatback filet mignon meatball beef ribs capicola.
